--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
 		<link
 		href="{{asset('assets/plugins/fontface/OpenSans.css')}}" rel="stylesheet">
 		{#
-												    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"> #}
+														    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"> #}
 		<link
 		href="{{asset('assets/plugins/fontface/OpenSans.css')}}" rel="stylesheet">
 		<!-- jQuery -->
@@ -219,19 +219,19 @@
 											</a>
 										</li>
 									{% endif %}
-									{% if is_granted("manage_request") %}
+									{% if is_granted("issued_request") %}
 										{# <li class="nav-item">
-																												                <a href="{{ path('product_index2') }}" class="nav-link">
-																												                  <i class="far fa-circle nav-icon"></i>
-																												                  <p>Product2</p>
-																												                </a>
-																												              </li> #}
+																																						                <a href="{{ path('product_index2') }}" class="nav-link">
+																																						                  <i class="far fa-circle nav-icon"></i>
+																																						                  <p>Product2</p>
+																																						                </a>
+																																						              </li> #}
 										{# <li class="nav-item">
-																												                <a href="{{ path('order_index') }}" class="nav-link">
-																												                  <i class="far fa-circle nav-icon"></i>
-																												                  <p>Requests</p>
-																												                </a>
-																												              </li> #}
+																																						                <a href="{{ path('order_index') }}" class="nav-link">
+																																						                  <i class="far fa-circle nav-icon"></i>
+																																						                  <p>Requests</p>
+																																						                </a>
+																																						              </li> #}
 											<li class="nav-item"> <a href="{{ path('requests_index') }}" class="nav-link">
 												<i class="far fa-circle nav-icon"></i>
 												<p>Issued Requests</p>
@@ -247,21 +247,26 @@
 													Stocks In Out</p>
 											</a>
 										</li>
-{% endif %}
-	{# {% if is_granted("manage_transfer") %} #}
+									{% endif %}
+									{# {% if is_granted("manage_transfer") %} #}
+									{% if is_granted("balance") %}
 										<li class="nav-item">
 											<a href="{{ path('stock_unique_index') }}" class="nav-link">
 												<i class="far fa-circle nav-icon"></i>
 												<p>Balance</p>
 											</a>
 										</li>
+									{% endif %}
+
+
+									{% if is_granted("my_items") %}
+
 										<li class="nav-item">
 											<a href="{{ path('profile') }}" class="nav-link">
 												<i class="far fa-circle nav-icon"></i>
 												<p>My Items</p>
 											</a>
 										</li>
-
 										<li class="nav-item">
 											<a href="{{ path('mtransReq') }}" class="nav-link">
 												<i class="far fa-circle nav-icon"></i>
@@ -283,7 +288,7 @@
 											</a>
 										</li>
 
-									{# {% endif %} #}
+									{% endif %}
 									{% if is_granted("manage_company") %}
 										<li class="nav-item">
 											<a href="{{ path('company_index') }}" class="nav-link">
@@ -293,11 +298,10 @@
 										</li>
 									{% endif %}
 
-									 
 
 								</ul>
 							</li>
-							{% if is_granted("manage_request") %}
+							{% if is_granted("manage_report") %}
 								<li class="nav-item has-treeview  ">
 
 
@@ -314,18 +318,25 @@
 										<li class="nav-item">
 											<a href="{{ path('product_report') }}" class="nav-link">
 												<i class="far fa-circle nav-icon"></i>
-												<p>Report 1</p>
+												<p>Report</p>
 											</a>
 										</li>
-									
+
+										<li class="nav-item">
+											<a href="{{ path('property') }}" class="nav-link">
+												<i class="far fa-circle nav-icon"></i>
+												<p>Transactions</p>
+											</a>
+										</li>
+
 
 									</ul>
 								</li>
 
 							{% endif %}
 
-							
-							<li class="nav-item has-treeview menu-open">
+							{# menu-open #}
+							<li class="nav-item has-treeview menu-open ">
 
 								{% if is_granted("manage_user") %}
 									<a href="#" class="nav-link">
@@ -362,131 +373,124 @@
 										</li>
 									{% endif %}
 								</ul>
-
-									 <li class="nav-item">
-											<a href="{{ path('app_forgot_password_request') }}" class="nav-link">
-												<i class="far fa-circle nav-icon"></i>
-												<p>Reset password</p>
-											</a>
-										</li>
-
-
+							</li>
+							<li class="nav-item">
+								<a href="{{ path('app_forgot_password_request') }}" class="nav-link">
+									<i class="far fa-circle nav-icon"></i>
+									<p>Reset password</p>
+								</a>
 							</li>
 
-						</ul>
-					</nav>
-					<!-- /.sidebar-menu -->
-				</div>
-				<!-- /.sidebar -->
-			</aside>
 
-			<!-- Content Wrapper. Contains page content -->
-			<div
-				class="content-wrapper">
-				<!-- Content Header (Page header) -->
-				<section class="content-header">
-					<div class="container-fluid">
-						<div class="row mb-2">
-							<div class="col-sm-6"></div>
-							<div class="col-sm-6">
-								<ol
-									class="breadcrumb float-sm-right">
-									{# 	<li class="breadcrumb-item">
-																																														<a href="/">Home</a> 
-																																														</li>#}
-									<li class="breadcrumb-item">
+						</li>
+
+					</ul>
+				</nav>
+				<!-- /.sidebar-menu -->
+			</div>
+			<!-- /.sidebar -->
+		</aside>
+
+		<!-- Content Wrapper. Contains page content -->
+		<div
+			class="content-wrapper">
+			<!-- Content Header (Page header) -->
+			<section class="content-header">
+				<div class="container-fluid">
+					<div class="row mb-2">
+						<div class="col-sm-6"></div>
+						<div class="col-sm-6">
+							<ol
+								class="breadcrumb float-sm-right">
+								{# 	<li class="breadcrumb-item">
+																																																						<a href="/">Home</a> 
+																																																						</li>#}
+								<li class="breadcrumb-item">
 									{% if app.user is defined %}
-									{{app.user.firstName}} ,
-									<a href="/logout"> Logout
+										{{app.user.firstName}}
+										,
+										<a href="/logout">
+											Logout
 										</a>
 									{% endif %}
-									
-										
-									</li>
 
-									{# {% block breadcrumb %}
-																																				
-																																				
-																																														{% endblock %} #}
-								</ol>
-							</div>
+
+								</li>
+
+								{# {% block breadcrumb %}
+																																												
+																																												
+																																																						{% endblock %} #}
+							</ol>
 						</div>
 					</div>
-					<!-- /.container-fluid -->
-				</section>
-
-				<!-- Main content -->
-				<section class="content">
-					<div class="row">
-						<div class="col-md-12">
-
-							{% for label, messages in app.flashes %}
-								{% for message in messages %}
-									<div class="row alert alert-{{ label }} alert-dismissible">
-										<button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-										<h4 class="mr-4">
-											<i class="icon fa fa-{% if label=='success' %}check {% else %}ban {% endif %}"></i>
-											Alert!</h4>
-										{{ message }}
-
-									</div>
-
-
-								{% endfor %}
-							{% endfor %}
-
-						</div>
-					</div>
-					<div class="container-fluid">
-						<div
-							class="row">
-							<!-- left column -->
-							<div class="col-md-12">
-								{% block body %}
-									<h1>Body yyyyyyyyyyy</h1>
-								{% endblock %}
-							</div>
-							<!--/.col (left) -->
-							<!-- right column -->
-							<div class="col-md-6"></div>
-							<!--/.col (right) -->
-						</div>
-						<!-- /.row -->
-					</div>
-					<!-- /.container-fluid -->
-				</section>
-				<!-- /.content -->
-			</div>
-			<!-- /.content-wrapper -->
-			<footer class="main-footer">
-				<div class="float-right d-none d-sm-block">
-					<b>Version</b>
-					1.0
 				</div>
-				<strong>Copyright &copy; 2020
-					<a href="/">Inventory Management</a>.</strong>
-				All rights reserved.
-			</footer>
+				<!-- /.container-fluid -->
+			</section>
+
+			<!-- Main content -->
+			<section class="content">
+				<div class="row">
+					<div class="col-md-12">
+
+						{% for label, messages in app.flashes %}
+							{% for message in messages %}
+								<div class="row alert alert-{{ label }} alert-dismissible">
+									<button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+									<h4 class="mr-4">
+										<i class="icon fa fa-{% if label=='success' %}check {% else %}ban {% endif %}"></i>
+										Alert!</h4>
+									{{ message }}
+
+								</div>
 
 
-			<!-- Control Sidebar -->
-		{# <aside class="control-sidebar control-sidebar-dark">
-												    <!-- Control sidebar content goes here -->
-												  </aside> #}
-			<!-- /.control-sidebar -->
+							{% endfor %}
+						{% endfor %}
+
+					</div>
+				</div>
+				<div class="container-fluid">
+					<div
+						class="row">
+						<!-- left column -->
+						<div class="col-md-12">
+							{% block body %}
+								<h1>Body yyyyyyyyyyy</h1>
+							{% endblock %}
+						</div>
+						<!--/.col (left) -->
+						<!-- right column -->
+						<div class="col-md-6"></div>
+						<!--/.col (right) -->
+					</div>
+					<!-- /.row -->
+				</div>
+				<!-- /.container-fluid -->
+			</section>
+			<!-- /.content -->
 		</div>
-		<!-- ./wrapper -->
-		<!-- Bootstrap 4 -->
-		<script src="{{asset('assets/plugins/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
-		<!-- jquery-validation -->
-		{# <script src="../../plugins/jquery-validation/jquery.validate.min.js"></script>
-												<script src="{{asset('assets/plugins/jquery-validation/additional-methods.min.js"></script> #}
-		<!-- AdminLTE App --><script src="{{asset('assets/dist/js/adminlte.min.js')}}"> </script>
-		<script src="{{asset('assets/plugins/select2/js/select2.full.min.js')}}"></script>
-		<script src="{{asset('assets/js/bootstrap.min.js')}}"></script>
+		<!-- /.content-wrapper -->
+		<footer class="main-footer">
+			<div class="float-right d-none d-sm-block">
+				<b>Version</b>
+				1.0
+			</div>
+			<strong>Copyright &copy; 2020
+				<a href="/">Inventory Management</a>.</strong>
+			All rights reserved.
+		</footer>
 
-		<script>
-			$(function () {
+
+		<!-- Control Sidebar -->
+	{# <aside class="control-sidebar control-sidebar-dark">
+													    <!-- Control sidebar content goes here -->
+													  </aside> #}
+		<!-- /.control-sidebar -->
+	</body>
+</html></div><!-- ./wrapper --><!-- Bootstrap 4 --><script src="{{asset('assets/plugins/bootstrap/js/bootstrap.bundle.min.js')}}"></script><!-- jquery-validation -->{# <script src="../../plugins/jquery-validation/jquery.validate.min.js"></script>
+													<script src="{{asset('assets/plugins/jquery-validation/additional-methods.min.js"></script> #}<!-- AdminLTE App --><script src="{{asset('assets/dist/js/adminlte.min.js')}}"> </script><script src="{{asset('assets/plugins/select2/js/select2.full.min.js')}}"></script><script src="{{asset('assets/js/bootstrap.min.js')}}"></script><script>
+$(function () {
 var url = window.location;
 // for single sidebar menu
 $('ul.nav-sidebar a').filter(function () {
@@ -498,10 +502,9 @@ $('ul.nav-treeview a').filter(function () {
 return this.href == url;
 }).parentsUntil(".nav-sidebar > .nav-treeview").css({'display': 'block'}).addClass(' ').prev('a').addClass('active');
 });
-		</script>
 
-		{% block javascripts %}{% endblock %}
 
-	</body>
-
-</html>
+$(".nav a").on("click", function () {
+$(".nav").find(".active").removeClass("active");
+$(this).parent().addClass("active");
+});</script>{% block javascripts %}{% endblock %}</body></html>
