--- a/templates/unit_of_measure/index.html.twig
+++ b/templates/unit_of_measure/index.html.twig
@@ -3,9 +3,14 @@
 {% block title %}UnitOfMeasure index{% endblock %}
 
 {% block body %}
-    <h1>UnitOfMeasure index</h1>
+    
 
-    <table class="table">
+<div class="card card-info">
+<div class="card card-header">
+<h2>Unit Of Measures list</h2>
+</div>
+<div class="card card-body">
+<table class="table">
         <thead>
             <tr>
                 <th>Id</th>
@@ -29,6 +34,9 @@
             </tr>
         {% endfor %}
         </tbody>
+</div>
+</div>
+    
     </table>
 
     <a href="{{ path('unit_of_measure_new') }}">Create new</a>
