--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -54,14 +54,14 @@
 							</div>
 							<div class="card-body">
 								<div class="col-xs-12 col-md-12">
-									{{ form_start(searchForm,{'attr': {'role':'form'}, 'method': 'GET'}) }}
+									{# {{ form_start(searchForm,{'attr': {'role':'form'}, 'method': 'GET'}) }}
 										<div class="row">
 											
 											<div class="col-sm-2">		
 												<div class="form-group">
 													<label class="col-sm-12 control-label no-padding-right">First Name</label>
 													{{ form_widget(searchForm.firstName,{'attr':{'class':'form-control'},'full_name':'firstName','value':app.request.get('firstName') })}}
-													{# <input type="text" class="form-control" name="name"/> #}
+													{# <input type="text" class="form-control" name="name"/> 
 													<div class="help-block with-errors"></div>
 												</div>
 											</div>
@@ -98,8 +98,8 @@
 													<label class="col-sm-12 control-label no-padding-right"></label>
 													<button class="btn btn-info" style="margin-top: 8px;width:100%;"><i class="fas fa-search"></i></button>
 												</div>
-											</div>
-										{{ form_end(form) }}
+											</div> 
+										{{ form_end(searchForm) }} #}
 									</div>
                                         <table class="table">
                                             <thead>
